--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,14 @@ hoidanit.upload-file.base-uri=file:///E:/1.PROJECT/Java/upload/
 #start from 1
 spring.data.web.pageable.one-indexed-parameters=true
 ###
+
+
+###
+#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nhattri172@gmail.com
+spring.mail.password=wkttmcotmrnhzvas
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+###
